Revision history for Python extension KRISP

$Id: Changes,v 1.8 2010-09-10 19:20:54 oops Exp $

2.1.0
	* Mon Sep 11 2010 JoungKyun.Kim <http://oops.org>
	- linked with over libkrisp 3.1.0
	- support whether ipv4 address or long ip address with arguments
      of py_netmask, py_mask2prefix, py_network, py_broadcast APIs


2.0.1
	* Mon Aug  9 2010 JoungKyun.Kim <http://oops.org>
	- linked with over libkrisp 3.0.2
	- Changed GPLv2 to LGPL

	* Tue Aug  3 2010 JoungKyun.Kim <http://oops.org>
	- fixed build environment
	- changed path of libkrisp headers


2.0.0
	* Mon Jul  5 2010 JoungKyun.Kim <http://oops.org>
	- rewrite all code for pure python module
	  Don't use swig wrapper any more.
	- increased performance to 100%

	* Tue Jun 22 2010 JoungKyun.Kim <http://oops.org>
	- fixed error messages by call-by-reference on search(_ex)

	* Mon Jun 21 2010 JoungKyun.Kim <http://oops.org>
	- fixed error message processing on search(_ex) api
	- add mask2prefix method

	* Sun Jun 20 2010 JoungKyun.Kim <http://oops.org>
	- 2.0 tree start
	- require over libkrisp 3.x


1.0.0
	* Tue Apr 30 2008 JoungKyun.Kim <http://oops.org>
	- 1.0.0 release